--- a/piloting_gazebo_simulation/models/tunnel_scenario/model.config
+++ b/piloting_gazebo_simulation/models/tunnel_scenario/model.config
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 
 <model>
-  <name>Viaduct scenario</name>
+  <name>Tunnel scenario</name>
   <version>1.0</version>
   <sdf version="1.5">model.sdf</sdf>
 
   <description>
-    Viaduct scenario.
+    Tunnel scenario.
   </description>
 
 </model>
