--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "realsense_gazebo_plugin"]
 	path = realsense_gazebo_plugin
 	url = https://github.com/alfalcmar/realsense_gazebo_plugin.git
+[submodule "rpg_information_field"]
+	path = rpg_information_field
+	url = https://github.com/alfalcmar/rpg_information_field.git
